# abyssal-tome

./: .gitignore  .pre-commit-config.yaml  DATA_MODEL.md  LICENSE  README.md  SCED_localization.py  controllers.py  flet_app.py  graphql.config.yml  main.py  model.py  process_json.py  process_json_to_SQLite.py  processed_data.json  pyproject.toml  symbol.py  utils.py  views.py
FAQML/tests/: test_process_new_format.py
assets/: opinionated_rulings.json  processed_data.json  raw_external_rulings.json  rulings_schema.json
scripts/: enrich_rulings_ai.py  process_json.py  process_new_format.py  scrape_arkhamdb_faq.py
src/abyssal_tome/: __init__.py  app.py  constants.py  controllers.py  exceptions.py  model.py  utils.py  views.py
tests/: test_process_new_format.py  test_replace_special_tags.py
